test/files/neg/varargs.check
<<<<<<< HEAD
varargs.scala:16: error: A method with a varargs annotation produces a forwarder method with the same signature (a: Int, b: Array[java.lang.String])Int as an existing method.
=======
varargs.scala:16: error: A method with a varargs annotation produces a forwarder method with the same signature (a: Int, b: Array[String])Int as an existing method.
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
    @varargs def v1(a: Int, b: String*) = a + b.length
                 ^
varargs.scala:19: error: A method without repeated parameters cannot be annotated with the `varargs` annotation.
  @varargs def nov(a: Int) = 0
               ^
<<<<<<< HEAD
varargs.scala:21: error: A method with a varargs annotation produces a forwarder method with the same signature (a: Int, b: Array[java.lang.String])Int as an existing method.
=======
varargs.scala:21: error: A method with a varargs annotation produces a forwarder method with the same signature (a: Int, b: Array[String])Int as an existing method.
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  @varargs def v2(a: Int, b: String*) = 0
               ^
three errors found
